<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pembaruanFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvKomunitasTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ini Halaman Komunitas"
        android:textSize="18sp"
        android:layout_gravity="center" />
</FrameLayout>
